--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Title test</h1>
+  <h1 class="title">Title test</h1>
   
   <script src="script.js"></script>
 </body>
